# cdocs

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  aliases.sh  pyproject.toml  repl.py  requirements.txt  setup.cfg  setup.py
.github/: dependabot.yml
cdocs/: cdocs.py  changer.py  concatter.py  config.py  context.py  context_metadata.py  contextual_docs.py  dict_finder.py  filer.py  finder.py  lister.py  multi_context_docs.py  pather.py  physical.py  reader.py  repl.py  simple_concatter.py  simple_config.py  simple_filer.py  simple_finder.py  simple_lister.py  simple_pather.py  simple_reader.py  simple_transformer.py  transformer.py
config/: config.ini
docs/apiui/: .last_change
docs/apiui/v1/: index.html
docs/apiui/v1/config/names/: labels.json
docs/example/: .last_change  404  404a.xml  404x.html  labels.json
docs/example/app/: labels.json
docs/example/app/home/: c.xml
docs/example/app/home/teams/: compose.html  labels.json
docs/example/app/home/teams/todos/: assignee.xml  tokens.json
docs/images/: .last_change
docs/images/app/home/teams/todos/: tokens.json
docs/internal/: .last_change  404  404b.xml
docs/internal/app/: home.txt
docs/internal/app/home/: teams.xml
docs/internal/app/home/teams/: delete_assignee.xml
docs/json/: .last_change
docs/json/app/: home.json
docs/json/app/home/: home_screen.json
docs/json/app/home/teams/: team_list.json
tests/: test_api_ui.py  test_cdocs.py  test_changer.py  test_config.py  test_context.py  test_metadata.py  test_the_cdocs_scheme.py  tests.py
(+3 files in other folders)
